--- a/app/src/main/res/layout/activity_section_a_form1.xml
+++ b/app/src/main/res/layout/activity_section_a_form1.xml
@@ -1152,7 +1152,7 @@
                         <LinearLayout style="@style/linearlayout_view">
 
                             <TextView
-                                style="@style/i_textview"
+                                style="@style/textviewsh"
                                 android:text="@string/kf1b07" />
 
                             <RadioGroup
