--- a/app/src/main/res/layout/activity_section_info_kmc.xml
+++ b/app/src/main/res/layout/activity_section_info_kmc.xml
@@ -33,7 +33,7 @@
                 <LinearLayout style="@style/linearlayout_view">
 
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/crataluka1" />
 
                     <Spinner
@@ -51,7 +51,7 @@
                 <LinearLayout style="@style/linearlayout_view">
 
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/cruc" />
 
                     <Spinner
@@ -69,7 +69,7 @@
                 <LinearLayout style="@style/linearlayout_view">
 
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/crvillage" />
 
                     <Spinner
@@ -138,7 +138,7 @@
                     <LinearLayout style="@style/linearlayout_view">
 
                         <TextView
-                            style="@style/i_textview"
+                            style="@style/textviews"
                             android:text="@string/kfa1" />
 
                         <RadioGroup
@@ -176,7 +176,7 @@
                         <LinearLayout style="@style/linearlayout_view">
 
                             <TextView
-                                style="@style/i_textview"
+                                style="@style/textviews"
                                 android:text="@string/kf1a2" />
 
                             <TextView
@@ -190,7 +190,7 @@
                     </android.support.v7.widget.CardView>
 
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf1a3" />
 
                     <com.edittextpicker.aliazaz.EditTextPicker
@@ -204,7 +204,7 @@
 
                     <!--04-->
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf1a4" />
 
                     <EditText
@@ -214,7 +214,7 @@
 
                     <!--05-->
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf1a5" />
 
                     <RadioGroup
@@ -235,7 +235,7 @@
 
                     <!--06-->
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf1a6" />
 
                     <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
@@ -248,7 +248,7 @@
 
                     <!--07-->
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf1a7" />
 
                     <io.blackbox_vision.datetimepickeredittext.view.TimePickerInputEditText
@@ -259,7 +259,7 @@
 
                     <!--08-->
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf1a8" />
 
 
@@ -309,7 +309,7 @@
 
                     <!--09-->
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf1a9" />
 
 
@@ -356,7 +356,7 @@
 
                     <!--10-->
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf1a10" />
 
 
@@ -389,7 +389,7 @@
                     tools:visibility="visible">
 
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf3a4" />
 
                     <Spinner
@@ -399,7 +399,7 @@
                         android:padding="20dp" />
 
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf2a7" />
 
                     <EditText
@@ -409,7 +409,7 @@
                         android:hint="@string/kf2a7" />
 
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf2a8" />
 
                     <EditText
@@ -430,7 +430,7 @@
                     tools:visibility="visible">
 
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf2a1" />
 
                     <EditText
@@ -445,7 +445,7 @@
 
 
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf2a2" />
 
                     <EditText
@@ -460,7 +460,7 @@
 
 
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf2a3" />
 
                     <com.edittextpicker.aliazaz.EditTextPicker
@@ -474,7 +474,7 @@
 
 
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf2a4" />
 
                     <com.edittextpicker.aliazaz.EditTextPicker
@@ -487,7 +487,7 @@
                         app:type="range" />
 
                     <TextView
-                        style="@style/i_textview"
+                        style="@style/textviews"
                         android:text="@string/kf2a5" />
 
                     <com.edittextpicker.aliazaz.EditTextPicker
@@ -518,7 +518,7 @@
                         <LinearLayout style="@style/linearlayout_view">
 
                             <TextView
-                                style="@style/i_textview"
+                                style="@style/textviews"
                                 android:text="@string/kf3b01" />
 
                             <RadioGroup
