--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -90,6 +90,22 @@
         <item name="android:elevation">1dp</item>
     </style>
 
+    <!-- SAJID Textviewh  -->
+    <style name="textviewsh">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <!--        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>-->
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+        <item name="android:background">@android:color/white</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:drawable">@drawable/textview_background_grad1</item>
+        <item name="android:typeface">sans</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:elevation">1dp</item>
+    </style>
+
     <style name="textview_heading">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -360,10 +376,13 @@
     </style>
 
     <style name="buttons" parent="android:Widget.Material.Light.Button">
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_margin">5dp</item>
         <item name="android:typeface">serif</item>
-        <item name="android:layout_width">wrap_content</item>
         <item name="android:radius">2dp</item>
         <item name="android:elevation">5dp</item>
     </style>
