--- a/app/src/main/res/layout/activity_section_g_form3.xml
+++ b/app/src/main/res/layout/activity_section_g_form3.xml
@@ -157,31 +157,6 @@
                             style="@style/i_textview"
                             android:text="@string/kf3g05h1" />
 
-                        <TextView
-                            style="@style/textview_heading"
-                            android:text="@string/kf3g05h2" />
-
-                        <RadioGroup
-                            android:id="@+id/kf3g05"
-                            style="@style/i_radiogroup">
-
-                            <RadioButton
-                                android:id="@+id/kf3g05a"
-                                style="@style/i_radiobutton"
-                                android:text="@string/yes" />
-
-                            <RadioButton
-                                android:id="@+id/kf3g05b"
-                                style="@style/i_radiobutton"
-                                android:text="@string/no" />
-
-                            <RadioButton
-                                android:id="@+id/kf3g0598"
-                                style="@style/i_radiobutton"
-                                android:text="@string/dkn" />
-
-                        </RadioGroup>
-
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
@@ -967,7 +942,7 @@
                             style="@style/EditText_number"
                             android:enabled="@{kf3g09a.checked ? false : true}"
                             android:text='@{kf3g09a.checked ? "" : kf3g09.getText().toString}'
-                            android:hint="@string/kf3g09"
+                            android:hint="@string/kf3g09a"
                             android:maxLength="2"
                             app:maxValue="23"
                             app:minValue="0"
@@ -976,6 +951,7 @@
                         <CheckBox
                             android:id="@+id/kf3g09a"
                             style="@style/checkbox"
+                            android:tag="-1"
                             android:text="@string/dkn" />
 
                     </LinearLayout>
