--- a/app/src/main/res/layout/activity_section_info_kmc.xml
+++ b/app/src/main/res/layout/activity_section_info_kmc.xml
@@ -718,18 +718,33 @@
                     </android.support.v7.widget.CardView>
 
 
-                    <TextView
-                        style="@style/textviews"
-                        android:text="@string/kf2a5" />
+                    <!--kf2a5-->
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cvkf2a5"
+                        style="@style/cardView">
 
-                    <com.edittextpicker.aliazaz.EditTextPicker
-                        android:id="@+id/kf2a5"
-                        style="@style/EditText_number"
-                        android:hint="@string/kf2a5"
-                        android:maxLength="2"
-                        app:maxValue="20"
-                        app:minValue="0"
-                        app:type="range" />
+                        <LinearLayout style="@style/hlinearlayout">
+
+                            <TextView
+                                style="@style/textviews"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:text="@string/kf2a5" />
+
+                            <com.edittextpicker.aliazaz.EditTextPicker
+                                android:id="@+id/kf2a5"
+                                style="@style/EditTextNum"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:hint="@string/times"
+                                android:maxLength="2"
+                                app:maxValue="20"
+                                app:minValue="0"
+                                app:type="range" />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
 
 
                 </LinearLayout>
@@ -757,72 +772,72 @@
 
                             <RadioGroup
                                 android:id="@+id/kf3b01"
-                                style="@style/i_radiogroup">
+                                style="@style/radiogroups">
 
                                 <RadioButton
                                     android:id="@+id/kf3b01a"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:enabled="false"
                                     android:text="@string/kf3b01a" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b01b"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:enabled="false"
                                     android:text="@string/kf3b01b" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b01c"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:enabled="false"
                                     android:text="@string/kf3b01c" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b01d"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:enabled="false"
                                     android:text="@string/kf3b01d" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b01e"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:enabled="false"
                                     android:text="@string/kf3b01e" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b01f"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/kf3b01f" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b01g"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:enabled="false"
                                     android:text="@string/kf3b01g" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b01h"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/kf3b01h" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b01i"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/kf3b01i" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b01j"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/kf3b01j" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b01k"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/kf3b01k" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b01l"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/kf3b01l" />
 
                             </RadioGroup>
@@ -831,9 +846,11 @@
 
                     </android.support.v7.widget.CardView>
 
+
                 </LinearLayout>
 
-                <!--Buttons-->
+
+                <!--End Buttons LinearLayout-->
                 <LinearLayout
                     android:id="@+id/fldGrpbtn"
                     style="@style/hlinearlayout"
@@ -858,6 +875,7 @@
                         android:text="@string/endForm" />
 
                 </LinearLayout>
+
 
             </LinearLayout>
 
